# rag-advance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: faq_database.json  products_master.json  support_info.txt  test_queries.json
scripts/: benchmark_chunk_strategy.py  init_db.py  run_chunk_strategy_benchmark.py  test_chunk_strategies.py
src/: main.py
src/application/services/: benchmark_service.py  chunk_service.py  indexing_service.py  rag_service.py  search_evaluation_service.py
src/application/services/benchmark/: chunk_strategy_evaluation_service.py
src/application/services/chunk/: faq_chunk_service.py  product_chunk_service.py
src/application/services/indexing/: indexing_service.py
src/application/services/rag/: rag_service.py
src/config/: logging_config.py  settings.py
src/domain/entities/: chunk.py  faq.py  product.py  query_result.py
src/domain/repositories/: faq_repository.py  product_repository.py  vector_search_repository.py
src/domain/services/: chunk_strategy.py  faq_chunk_strategy.py  product_chunk_strategy.py
src/domain/services/chunk_strategies/: granular_chunk_strategy.py  section_chunk_strategy.py  unified_chunk_strategy.py
src/domain/services/faq_chunk_strategies/: category_unified_chunk_strategy.py  qa_pair_chunk_strategy.py  qa_separate_chunk_strategy.py
src/domain/services/product_chunk_strategies/: granular_chunk_strategy.py  section_chunk_strategy.py  unified_chunk_strategy.py
src/infrastructure/repositories/: chroma_vector_search_repository.py  json_faq_repository.py  json_product_repository.py
src/presentation/cli/: application.py  container.py  handlers.py  main.py  presenter.py
