[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-advance"
version = "0.1.0"
description = "TechMart ChatBot - Advanced RAG Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.93.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
techmart-bot = "presentation.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
