[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-advance"
version = "0.1.0"
description = "TechMart ChatBot - Advanced RAG Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "chromadb>=1.0.13",
    "isort>=6.0.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.93.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.12.3",
]

[project.scripts]
techmart-bot = "presentation.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
